fix checkbox box edge case and whitespace in image route

--- a/css/aiz-core.css
+++ b/css/aiz-core.css
@@ -20169,7 +20169,7 @@ aside {
 
 #login-form-1 {
   width: 100%;
-  max-width: 50rem;
+  max-width: 52rem;
 }
 #login-form-1 .left-side {
   width: 50%;
@@ -20205,7 +20205,7 @@ aside {
 
 #login-form-2 {
   width: 100%;
-  max-width: 50rem;
+  max-width: 52rem;
 }
 #login-form-2 .left-side {
   width: 50%;
@@ -20242,7 +20242,7 @@ aside {
 
 #login-form-3 {
   width: 100%;
-  max-width: 50rem;
+  max-width: 52rem;
 }
 #login-form-3 .left-side {
   width: 50%;
