--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1005,7 +1005,7 @@ aside {
 ///// Scss for page 10 //////
 #login-form-1 {
     width: 100%;
-    max-width: 50rem;
+    max-width: 52rem;
 
     .left-side {
         width: 50%;
@@ -1053,7 +1053,7 @@ aside {
 
 #login-form-2 {
     width: 100%;
-    max-width: 50rem;
+    max-width: 52rem;
 
     .left-side {
         width: 50%;
@@ -1101,7 +1101,7 @@ aside {
 
 #login-form-3 {
     width: 100%;
-    max-width: 50rem;
+    max-width: 52rem;
 
     .left-side {
         width: 50%;
